# sensei-demo-yolov5

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  .yapfignore  Makefile  README.md  REUSE.toml  requirements-streaming.txt
src_GAP/: .gdbinit  CMakeLists.txt  ISPModel.c  Makefile  README.md  custom_layout_multi.json  sdk.config
src_GAP/networks/YOLOv5/: .gitignore  YOLOv5_HeadCount.ipynb  YOLOv5_HeadCount_128x128.tflite  YOLOv5_HeadCount_192x192.tflite  YOLOv5_HeadCount_256x256.tflite  YOLOv5_HeadCount_320x320.tflite  YOLOv5_HeadCount_384x384.tflite  YOLOv5_HeadCount_448x448.tflite  YOLOv5_HeadCount_512x512.tflite  YOLOv5_HeadCount_64x64.tflite  YOLOv5_trained_deploy.ipynb
src_GAP/src/: CMakeLists.txt  globals.h  hm0360_regs.h  log.h  main.c  main.h  uart_comm.c  uart_comm.h  utils.c  utils.h
src_GAP/src/networks/: .clang-format-ignore  .gitignore
src_GAP/src/networks/YOLOv5/: CMakeLists.txt  yolo_utils.c  yolo_utils.h
src_GAP/src/networks/YOLOv5/generated_128x128/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_128x128/weights_tensors/: Arith_constant.tensor  Arith_constant15.tensor  Arith_constant17.tensor  Arith_constant18.tensor  Arith_constant19.tensor  Arith_constant21.tensor  Arith_constant22.tensor  Arith_constant23.tensor  Arith_constant24.tensor  Arith_constant26.tensor  Arith_constant27.tensor  Arith_constant28.tensor  Arith_constant30.tensor  Arith_constant31.tensor  Arith_constant32.tensor  Arith_constant33.tensor  Arith_constant34.tensor  Arith_constant35.tensor  Arith_constant36.tensor  Arith_constant37.tensor  Arith_constant39.tensor  Arith_constant40.tensor  Arith_constant41.tensor  Arith_constant42.tensor  Arith_constant43.tensor  Arith_constant45.tensor  Arith_constant46.tensor  Arith_constant47.tensor  Arith_constant48.tensor  Arith_constant49.tensor  Arith_constant51.tensor  Arith_constant52.tensor  Arith_constant53.tensor  Arith_constant54.tensor  Arith_constant55.tensor  Arith_constant57.tensor  Arith_constant58.tensor  Arith_constant59.tensor  Arith_constant60.tensor  Arith_constant61.tensor  (+163 more)
src_GAP/src/networks/YOLOv5/generated_192x192/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_192x192/weights_tensors/: Arith_constant.tensor  Arith_constant14.tensor  Arith_constant15.tensor  Arith_constant17.tensor  Arith_constant18.tensor  Arith_constant19.tensor  Arith_constant21.tensor  Arith_constant22.tensor  Arith_constant23.tensor  Arith_constant24.tensor  Arith_constant26.tensor  Arith_constant27.tensor  Arith_constant28.tensor  Arith_constant30.tensor  Arith_constant31.tensor  Arith_constant32.tensor  Arith_constant33.tensor  Arith_constant34.tensor  Arith_constant35.tensor  Arith_constant36.tensor  Arith_constant37.tensor  Arith_constant39.tensor  Arith_constant40.tensor  Arith_constant41.tensor  Arith_constant42.tensor  Arith_constant43.tensor  Arith_constant45.tensor  Arith_constant46.tensor  Arith_constant47.tensor  Arith_constant48.tensor  Arith_constant49.tensor  Arith_constant51.tensor  Arith_constant52.tensor  Arith_constant53.tensor  Arith_constant54.tensor  Arith_constant55.tensor  Arith_constant57.tensor  Arith_constant58.tensor  Arith_constant59.tensor  Arith_constant60.tensor  (+165 more)
src_GAP/src/networks/YOLOv5/generated_256x256/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_256x256/weights_tensors/: Arith_constant.tensor  Arith_constant14.tensor  Arith_constant21.tensor  Arith_constant22.tensor  Arith_constant23.tensor  Arith_constant24.tensor  Arith_constant26.tensor  Arith_constant27.tensor  Arith_constant28.tensor  Arith_constant30.tensor  Arith_constant31.tensor  Arith_constant32.tensor  Arith_constant33.tensor  Arith_constant34.tensor  Arith_constant35.tensor  Arith_constant36.tensor  Arith_constant37.tensor  Arith_constant39.tensor  Arith_constant40.tensor  Arith_constant41.tensor  Arith_constant42.tensor  Arith_constant43.tensor  Arith_constant45.tensor  Arith_constant46.tensor  Arith_constant47.tensor  Arith_constant48.tensor  Arith_constant49.tensor  Arith_constant51.tensor  Arith_constant52.tensor  Arith_constant53.tensor  Arith_constant54.tensor  Arith_constant55.tensor  Arith_constant57.tensor  Arith_constant58.tensor  Arith_constant59.tensor  Arith_constant60.tensor  Arith_constant61.tensor  Arith_constant62.tensor  Arith_constant63.tensor  Arith_constant65.tensor  (+161 more)
src_GAP/src/networks/YOLOv5/generated_320x320/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_320x320/weights_tensors/: Arith_constant.tensor  Arith_constant14.tensor  Arith_constant16.tensor  Arith_constant18.tensor  Arith_constant21.tensor  Arith_constant22.tensor  Arith_constant23.tensor  Arith_constant24.tensor  Arith_constant26.tensor  Arith_constant27.tensor  Arith_constant28.tensor  Arith_constant30.tensor  Arith_constant31.tensor  Arith_constant32.tensor  Arith_constant33.tensor  Arith_constant34.tensor  Arith_constant35.tensor  Arith_constant36.tensor  Arith_constant37.tensor  Arith_constant39.tensor  Arith_constant40.tensor  Arith_constant41.tensor  Arith_constant42.tensor  Arith_constant43.tensor  Arith_constant45.tensor  Arith_constant46.tensor  Arith_constant47.tensor  Arith_constant48.tensor  (+171 more)
src_GAP/src/networks/YOLOv5/generated_384x384/: Expression_Kernels.c  Expression_Kernels.h  YOLOv5.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_448x448/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_512x512/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_GAP/src/networks/YOLOv5/generated_64x64/: Expression_Kernels.c  Expression_Kernels.h  model.c  modelInfos.h
src_NRF/: CMakeLists.txt  bluetooth.c  bluetooth.h  i2c_helpers.c  i2c_helpers.h  main.c  pm_static.txt  prj.conf
src_NRF/bsp/: pwr_bsp.c
src_NRF/child_image/: b0n.conf  hci_ipc.conf  mcuboot.conf
(+799 files in other folders)
